Run MSBuild inside the build
Triggers the infinite-hang case of Microsoft/msbuild#3161.

--- a/AFewProjectsForNodeReuse/AFewProjectsForNodeReuse.csproj
+++ b/AFewProjectsForNodeReuse/AFewProjectsForNodeReuse.csproj
@@ -12,4 +12,8 @@
     <ProjectReference Include="..\ClassLibrary4\ClassLibrary4.csproj" />
   </ItemGroup>
 
+  <Target Name="RecurrentCall" AfterTargets="Build">
+    <Message Importance="High" Text="Starting recurrent build" />
+    <Exec Command="dotnet msbuild ../AFewProjectsForNodeReuse.sln /t:NonExistentTarget" />
+  </Target>
 </Project>
